--- a/index.html
+++ b/index.html
@@ -2,32 +2,41 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tushar Patki - Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <h1>Tushar Patki</h1>
-        <nav>
-            <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="#experience">Experience</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
+        <p>Gurugram, Haryana, India | tusharpatki9@gmail.com | 9131385188</p>
+        <p><a href="https://linkedin.com/in/tushar-patki-profile">LinkedIn Profile</a></p>
     </header>
-
-    <section id="about">
-        <h2>About Me</h2>
-        <p>Professional summary...</p>
+    <section id="summary">
+        <h2>Summary</h2>
+        <p>I'm an Operation Manager with expertise in Customer Service, Leadership, Excel & Finance...</p>
+        <!-- Add more of your summary content here -->
     </section>
-
-    <!-- Repeat sections for Experience, Skills, and Contact -->
-
+    <section id="experience">
+        <h2>Experience</h2>
+        <!-- Add your job entries here -->
+        <article>
+            <h3>Operations Manager - Yaper</h3>
+            <p>Apr 2023 - Present (10 months)</p>
+            <p>Leading a team of 6, focusing on customer service, operations, and finance...</p>
+        </article>
+        <!-- Repeat for other positions -->
+    </section>
+    <section id="education">
+        <h2>Education</h2>
+        <!-- Add your educational background here -->
+    </section>
+    <section id="skills">
+        <h2>Skills</h2>
+        <!-- List your skills here -->
+    </section>
+    <!-- Add more sections as needed -->
     <footer>
-        <p>Contact info and social links</p>
+        <p>Let's connect for collaborations and mutual growth. Feel free to reach out at tusharpatki9@gmail.com</p>
     </footer>
 </body>
 </html>
