--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                 </div>
 
                 <div class="Vertical">
-                    <img class="image-top" src="Operation manager 1.webp">
+                    <img class="image-top" src="Operation manager 1.png">
                     <div class="Vertical-title">
                         Operations Manager at Yaper Technologies (2023-Present)
                     </div>
